// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matchDomain match path on domain as namespace 1`] = `
Object {
  "moduleId": "bond",
  "schemaId": "bond",
}
`;

exports[`matchDomain match path on domain as namespace 2`] = `
Object {
  "moduleId": "bond",
  "schemaId": "bond",
}
`;

exports[`matchDomain match path on domain, reg 1`] = `
Object {
  "moduleId": "foo",
  "schemaId": "foo",
}
`;

exports[`note serialize basic 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

"
`;

exports[`note serialize with children 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

"
`;

exports[`note serialize with custom 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
bond: 42
---

"
`;

exports[`note serialize with parent 1`] = `
"---
id: foo
title: Foo
desc: ''
updated: '1'
created: '1'
---

"
`;
